// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic > hi {0} ! 1`] = `
{
  "body": {
    "end": 8,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 6,
        "index": 0,
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 5,
      },
      {
        "end": 8,
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "start": 6,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 8,
  "loc": {
    "end": {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "source": "hi {0} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`errors > nest placeholder: 'hi {{0}} !' 1`] = `
{
  "body": {
    "end": 10,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 7,
        "index": 0,
        "loc": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 5,
      },
      {
        "end": 10,
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
        },
        "start": 8,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 10,
  "loc": {
    "end": {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "source": "hi {{0}} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`errors > not close brace included spaces: 'hi {  0 !' 1`] = `
{
  "body": {
    "end": 9,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 9,
        "index": 0,
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 5,
      },
    ],
    "loc": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 9,
  "loc": {
    "end": {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "source": "hi {  0 !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`errors > not close brace with EOF: 'hi {0' 1`] = `
{
  "body": {
    "end": 5,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 5,
        "index": 0,
        "loc": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 5,
      },
    ],
    "loc": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 5,
  "loc": {
    "end": {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "source": "hi {0",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`errors > not close brace: 'hi {0 !' 1`] = `
{
  "body": {
    "end": 7,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 7,
        "index": 0,
        "loc": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 5,
      },
    ],
    "loc": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 7,
  "loc": {
    "end": {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
    "source": "hi {0 !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`errors > space in nest placeholder: 'hi { { 0 } } !' 1`] = `
{
  "body": {
    "end": 14,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 11,
        "index": 0,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
        },
        "start": 5,
        "type": 5,
      },
      {
        "end": 14,
        "loc": {
          "end": {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
          "start": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "start": 12,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 14,
  "loc": {
    "end": {
      "column": 15,
      "line": 1,
      "offset": 14,
    },
    "source": "hi { { 0 } } !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`multiline > {0} {1}　{2} 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 3,
        "index": 0,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 5,
      },
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 3,
        "value": " ",
      },
      {
        "end": 7,
        "index": 1,
        "loc": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 5,
      },
      {
        "end": 8,
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
        },
        "start": 7,
        "type": 3,
        "value": "　",
      },
      {
        "end": 11,
        "index": 2,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
        },
        "start": 8,
        "type": 5,
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "{0} {1}　{2}",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`new lines in placeholder > {0}
{1}
{2} 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 3,
        "index": 0,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 5,
      },
      {
        "end": 4,
        "loc": {
          "end": {
            "column": 1,
            "line": 2,
            "offset": 4,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 3,
        "value": "
",
      },
      {
        "end": 7,
        "index": 1,
        "loc": {
          "end": {
            "column": 4,
            "line": 2,
            "offset": 7,
          },
          "start": {
            "column": 1,
            "line": 2,
            "offset": 4,
          },
        },
        "start": 4,
        "type": 5,
      },
      {
        "end": 8,
        "loc": {
          "end": {
            "column": 1,
            "line": 3,
            "offset": 8,
          },
          "start": {
            "column": 4,
            "line": 2,
            "offset": 7,
          },
        },
        "start": 7,
        "type": 3,
        "value": "
",
      },
      {
        "end": 11,
        "index": 2,
        "loc": {
          "end": {
            "column": 4,
            "line": 3,
            "offset": 11,
          },
          "start": {
            "column": 1,
            "line": 3,
            "offset": 8,
          },
        },
        "start": 8,
        "type": 5,
      },
    ],
    "loc": {
      "end": {
        "column": 4,
        "line": 3,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 4,
      "line": 3,
      "offset": 11,
    },
    "source": "{0}
{1}
{2}",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`whitespaces in placeholder > hi {  -1 } ! 1`] = `
{
  "body": {
    "end": 12,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 10,
        "index": -1,
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 5,
      },
      {
        "end": 12,
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
        },
        "start": 10,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 13,
        "line": 1,
        "offset": 12,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 12,
  "loc": {
    "end": {
      "column": 13,
      "line": 1,
      "offset": 12,
    },
    "source": "hi {  -1 } !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;
